Fix spacing UI issue after posting something.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,6 +33,6 @@
      }
  }
 
- .notifactions:not(:last-child) {
+ .notification:not(:last-child) {
      margin-bottom: 0;
  }
